// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Banner should render in brand color 1`] = `
<body>
  <div>
    <div
      class="flex h-10 items-center justify-center text-sm font-medium bg-surface-brand-component text-brand relative"
    >
      Hello
    </div>
  </div>
</body>
`;

exports[`Banner should render in yellow 1`] = `
<body>
  <div>
    <div
      class="flex h-10 items-center justify-center text-sm font-medium bg-surface-warning-component text-warning relative"
    >
      Hello
    </div>
  </div>
</body>
`;
